--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.12.0",
     "react-grid-system": "^6.0.7",
     "react-icons": "^3.8.0",
+    "react-redux": "^7.1.0-rc.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
