--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-grid-system": "^6.0.7",
     "react-icons": "^3.8.0",
     "react-redux": "^7.1.0-rc.1",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
